[project]
# ref: https://github.com/pypa/sampleproject/blob/main/pyproject.toml
name = "ledhntr"
# version = {attr = "ledhntr.__version__"}
# dynamic = ["version"]
## I can't figure out proper dynamic versioning with this format
## and I'm just wasting time at this point. Might as well hardcode
## it here and be done with it.
version = "0.0.2"
description = "LED-HNTR"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["infosec", "cyber", "typedb", "graphdb", "threat-intel"]
authors = [{name = "Nick Driver (@TheDr1ver)"}]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Topic :: Security',
    'Topic :: Utilities',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.9'
]
[project.urls]
"Homepage" = "https://github.com/TheDr1ver/ledhntr-suite-public"

[project.scripts]
ledhntr = "ledhntr.cli:main"

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"